<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="146dp"
        android:layout_height="135dp"
        android:contentDescription="TODO"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="357dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/blood_care"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/username1"
        android:layout_width="357dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="357dp"
        android:layout_height="52dp"
        android:background="@drawable/btn_background"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/Login_form_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="357dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/register_msg"
        android:textAlignment="center"
        android:textColor="@color/Login_form_details"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsignin1"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="352dp"
        android:layout_height="55dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="16dp"
        android:hint="Password"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />


</androidx.constraintlayout.widget.ConstraintLayout>


